Bug 287274 - After failing to download some packages, muon updater won't close
Summary: After failing to download some packages, muon updater won't close
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: qaptworker (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 290968 294358 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-22 16:02 UTC by mgolden
Modified: 2012-02-21 16:42 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.95, 1.2.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mgolden 2011-11-22 16:02:53 UTC
Version:           0.2 (using KDE 4.7.2) 
OS:                Linux

Ubuntu pushed out updates of some applications today, including some of libreoffice.  I ran the updater, but it told me that it was unable to download some of the packages.  This may have been due to my ugly corporate firewall.

The problem is that after I click on the OK button on the error dialog box, nothing happens.  Most of the menu items are greyed out, and the window cannot be closed except through command line kill or logout.

Reproducible: Didn't try

Steps to Reproduce:
Start an update, including some error.  Click on the OK button on the error dialog box

Actual Results:  
Muon updater won't close.  Virtually all of it is greyed out.

Expected Results:  
It should install what it could and not be left in an unclosable state.

OS: Linux (x86_64) release 3.0.0-13-generic
Compiler: gcc
Comment 1 mgolden 2011-11-22 16:05:09 UTC
This might be a duplicate of bug 281623, but that is marked fixed and I am running the latest beta.
Comment 2 Johan Thelmen 2011-12-07 08:24:54 UTC
I confirm. This is a me too on Oneiric. Common when I turn on computer and forget to connect to the WiFi first before I see and try to run the update.

Trying to see if it is fixed in trunk and in 1.3 alfa I got this errors.. (only copied into the old directory) Maybe not compatible with Oneiric.
cd /home/johan/dev/muon-1.2.1/obj-x86_64-linux-gnu/libmuon && /usr/bin/c++   -DMAKE_MUONPRIVATE_LIB -D_BSD_SOURCE -g -O2  -Wnon-virtual-dtor -Wno-long-long -ansi -Wundef -Wcast-align -Wchar-subscripts -Wall -W -Wpointer-arith -Wformat-security -fno-exceptions -DQT_NO_EXCEPTIONS -fno-check-new -fno-common -Woverloaded-virtual -fno-threadsafe-statics -fvisibility=hidden -Werror=return-type -fvisibility-inlines-hidden -std=c++0x -DNDEBUG -DQT_NO_DEBUG -fPIC -I/home/johan/dev/muon-1.2.1/obj-x86_64-linux-gnu/libmuon -I/home/johan/dev/muon-1.2.1/libmuon -I/home/johan/dev/muon-1.2.1/obj-x86_64-linux-gnu -I/usr/include/KDE -I/usr/include/qt4/phonon -I/usr/include/qt4/QtXmlPatterns -I/usr/include/qt4/QtXml -I/usr/include/qt4/QtWebKit -I/usr/include/qt4/QtUiTools -I/usr/include/qt4/QtTest -I/usr/include/qt4/QtSvg -I/usr/include/qt4/QtSql -I/usr/include/qt4/QtScriptTools -I/usr/include/qt4/QtScript -I/usr/include/qt4/QtOpenGL -I/usr/include/qt4/QtNetwork -I/usr/include/qt4/QtHelp -I/usr/include/qt4/QtDesigner -I/usr/include/qt4/QtDeclarative -I/usr/include/qt4/QtDBus -I/usr/include/qt4/Qt3Support -I/usr/include/qt4/QtGui -I/usr/include/qt4/QtCore -I/usr/include/qt4/Qt -I/usr/share/qt4/mkspecs/default -I/usr/include/qt4    -o CMakeFiles/muonprivate.dir/ChangesDialog.o -c /home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.cpp
In file included from /home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.cpp:21:0:
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.h:38:42: error: 'StateChanges' in namespace 'QApt' does not name a type
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.h:38:62: error: ISO C++ forbids declaration of 'changes' with no type [-fpermissive]
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.h:43:28: error: 'StateChanges' in namespace 'QApt' does not name a type
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.h:43:48: error: ISO C++ forbids declaration of 'changes' with no type [-fpermissive]
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.h:44:28: error: 'StateChanges' in namespace 'QApt' does not name a type
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.h:44:48: error: ISO C++ forbids declaration of 'changes' with no type [-fpermissive]
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.cpp:37:53: error: 'StateChanges' in namespace 'QApt' does not name a type
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.cpp:37:73: error: ISO C++ forbids declaration of 'changes' with no type [-fpermissive]
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.cpp:93:39: error: 'StateChanges' in namespace 'QApt' does not name a type
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.cpp:93:59: error: ISO C++ forbids declaration of 'changes' with no type [-fpermissive]
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.cpp: In member function 'void ChangesDialog::addPackages(const int&)':
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.cpp:95:27: error: request for member 'constBegin' in 'changes', which is of non-class type 'const int'
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.cpp:95:38: error: unable to deduce 'auto' from '<expression error>'
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.cpp:95:54: error: request for member 'constEnd' in 'changes', which is of non-class type 'const int'
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.cpp: At global scope:
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.cpp:120:39: error: 'StateChanges' in namespace 'QApt' does not name a type
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.cpp:120:59: error: ISO C++ forbids declaration of 'changes' with no type [-fpermissive]
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.cpp: In member function 'int ChangesDialog::countChanges(const int&)':
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.cpp:123:25: error: request for member 'constBegin' in 'changes', which is of non-class type 'const int'
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.cpp:123:36: error: unable to deduce 'auto' from '<expression error>'
/home/johan/dev/muon-1.2.1/libmuon/ChangesDialog.cpp:125:28: error: request for member 'constEnd' in 'changes', which is of non-class type 'const int'
make[3]: *** [libmuon/CMakeFiles/muonprivate.dir/ChangesDialog.o] Error 1
Comment 3 Jonathan Thomas 2012-01-27 05:14:18 UTC
Git commit 0647c1b7485533d6d388684b1f85e08a9aff014a by Jonathan Thomas.
Committed on 27/01/2012 at 06:12.
Pushed by jmthomas into branch 'master'.

Our WorkerAquire class only emits warnings about individual packages failing to download.
If these failures end up making the entire commit fail, we need to also emit a FetchFailed
error to signify this. Otherwise frontend applications will not error out and hang,
thinking that the commit will start soon.
FIXED-IN:1.2.95, 1.2.3

M  +3    -2    src/worker/worker.cpp

http://commits.kde.org/libqapt/0647c1b7485533d6d388684b1f85e08a9aff014a
Comment 4 Jonathan Thomas 2012-01-27 05:14:18 UTC
Git commit 1c652125e88f60cbf5975a89b44a30099a5ea477 by Jonathan Thomas.
Committed on 27/01/2012 at 06:12.
Pushed by jmthomas into branch '1.2'.

Our WorkerAquire class only emits warnings about individual packages failing to download.
If these failures end up making the entire commit fail, we need to also emit a FetchFailed
error to signify this. Otherwise frontend applications will not error out and hang,
thinking that the commit will start soon.
FIXED-IN:1.2.95, 1.2.3

M  +3    -2    src/worker/worker.cpp

http://commits.kde.org/libqapt/1c652125e88f60cbf5975a89b44a30099a5ea477
Comment 5 Jonathan Thomas 2012-01-27 05:20:54 UTC
*** Bug 290968 has been marked as a duplicate of this bug. ***
Comment 6 Jonathan Thomas 2012-02-21 16:42:09 UTC
*** Bug 294358 has been marked as a duplicate of this bug. ***