Our WorkerAquire class only emits warnings about individual packages failing to download. If these failures end up making the entire commit fail, we need to also emit a FetchFailed error to signify this. Otherwise frontend applications will not error out and hang, thinking that the commit will start soon.

BUG:287274
FIXED-IN:1.2.95, 1.2.3